text-redaction/src/snapshots/text_redaction__pattern__test_pattern__can_redact_patterns.snap
---
source: text-redaction/src/pattern.rs
expression: "redaction.redact_patterns(TEXT, false)"
---
Info {
    string: "foo,[TEXT_REDACTED],baz,foo",
    captures: [
        Captures {
            text: "bar",
            position: None,
        },
    ],
}
