text-redaction/src/snapshots/text_redaction__pattern__test_pattern__can_redact_patterns_with_info.snap
---
source: text-redaction/src/pattern.rs
expression: "redaction.redact_patterns(TEXT, true)"
---
Info {
    string: "foo,[TEXT_REDACTED],baz,foo",
    captures: [
        Captures {
            text: "bar",
            position: Some(
                Position {
                    start_offset: 4,
                    end_offset: 7,
                },
            ),
        },
    ],
}
